updated some deps

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>LoginPortal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://kit.fontawesome.com/9198c0386a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="//claes.b-cdn.net/fa/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
